# SIGNALpy-metapodatkovna_baza

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
data/: antenna.gra  database.ini
src/signalpy_metapodatkovna_baza/: db2crux.py  db2log.py  queries.py  templates.py
src/utils/: transformations.py
